--- a/reddrop_buddies/index.html
+++ b/reddrop_buddies/index.html
@@ -129,7 +129,7 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    07/06/2023</small>
+                    21/08/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -144,10 +144,10 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230607-1.3.1</li>
+                        20230821-1.3.2</li>
                       <li>
                         <strong>Recent Update:</strong>
-                        07/06/2023</li>
+                        21/08/2023</li>
                       <li>
                         <strong>Release Date:</strong>
                         16/11/2017</li>
@@ -2245,7 +2245,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.2.9 to 1.3.0</b>
+                          <b>Upgrading from 1.3.1 to 1.3.2</b>
                         </p>
 
                         <ul>
@@ -2263,6 +2263,17 @@
 
                     <div class="row">
                       <div class="col-md-12 col-12">
+
+                        <div>
+                          <p><b>2023, August, 21 - v 1.3.2</b></p>
+                          <ul class="simple-list">
+                            <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>
+                            <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
+                            <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                            <li><b>- Updated:</b> Theme language/translation file.</li>
+                            <li><b>- Updated:</b> Theme documentation.</li>
+                          </ul>
+                        </div>
 
                         <p><b>2023, June, 07 - v 1.3.1</b></p>
                         <ul class="simple-list">
