--- a/petapalozza/index.html
+++ b/petapalozza/index.html
@@ -124,7 +124,7 @@
                     <a class="nav-link scrollto" href="#translate_theme" title="Theme Translation">Theme Translation</a>
                     <a class="nav-link scrollto" href="#trouble_shoot" title="Troubleshooting">Troubleshooting</a>
                     <a class="nav-link scrollto" href="#upgrade_notes" title="Upgrade Notes">Upgrade Notes</a>
-                    <a class="nav-link scrollto" href="#changelog" title="Change Log">Change Log</a>
+                    <a class="nav-link scrollto" href="#change_log" title="Change Log">Change Log</a>
                     <a class="nav-link scrollto" href="#credits" title="Sources and Credits">Sources & Credits</a>
                   </nav>
 
@@ -138,7 +138,7 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    08/06/2023</small>
+                    22/08/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -153,10 +153,10 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230608-1.2.2</li>
+                        20230722-1.2.3</li>
                       <li>
                         <strong>Recent Update:</strong>
-                        08/06/2023</li>
+                        22/08/2023</li>
                       <li>
                         <strong>Release Date:</strong>
                         20/11/2017</li>
@@ -1348,7 +1348,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.2.0 to 1.2.1</b>
+                          <b>Upgrading from 1.2.2 to 1.2.3</b>
                         </p>
 
                         <ul>
@@ -1360,10 +1360,21 @@
 
                   <!-- Change Log  -->
 
-                  <div class="section-block" id="changelog">
+                  <div class="section-block" id="change_log">
                     <h3 class="block-title">Change Log</h3>
 
                     <div class="section-block">
+
+                      <div>
+                        <p><b>2023, August, 22 - v 1.2.3</b></p>
+                        <ul class="simple-list">
+                          <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>
+                          <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
+                          <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                          <li><b>- Updated:</b> Theme language/translation file.</li>
+                          <li><b>- Updated:</b> Theme documentation.</li>
+                        </ul>
+                      </div>
                       
                       <p><b>2023, June, 08 - v 1.2.2</b></p>
                       <ul class="simple-list">
