--- a/restore/index.html
+++ b/restore/index.html
@@ -177,7 +177,7 @@
 
                   <small>
                     <i>Doc Last Update</i>
-                    05/01/2023</small>
+                    22/08/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -195,10 +195,10 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230105-1.2.3</li>
+                        20230822-1.2.4</li>
                       <li>
                         <strong>Recent Update:</strong>
-                        05/01/2023</li>
+                        22/08/2023</li>
                       <li>
                         <strong>Release Date:</strong>
                         19/03/2017</li>
@@ -3416,7 +3416,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.2.1 to 1.2.2</b>
+                          <b>Upgrading from 1.2.3 to 1.2.4</b>
                         </p>
 
                         <ul>
@@ -3436,6 +3436,17 @@
 
                     <div class="row">
                       <div class="col-md-12 col-12">
+
+                        <div>
+                          <p><b>2023, August, 22 - v 1.2.4</b></p>
+                          <ul class="simple-list">
+                            <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>
+                            <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
+                            <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                            <li><b>- Updated:</b> Theme language/translation file.</li>
+                            <li><b>- Updated:</b> Theme documentation.</li>
+                          </ul>
+                        </div>
 
 
                         <p>
