--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -149,7 +149,7 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    13/08/2023</small>
+                    23/08/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -162,8 +162,8 @@
                   <h2 class="section-title">Theme's General Information</h2>
                   <div class="section-block">
                     <ul class="square-list">
-                      <li><strong>Version:</strong> 20230813-1.3.2</li>
-                      <li><strong>Recent Update:</strong> 04/06/2023</li>
+                      <li><strong>Version:</strong> 20230823-1.3.3</li>
+                      <li><strong>Recent Update:</strong> 23/08/2023</li>
                       <li><strong>Release Date:</strong> 09/02/2018</li>
                       <li><strong>Premium Support:</strong> <a href="https://themeforest.net/item/sharai-khana-computer-service-center-wordpress-theme/21008758/support/contact">Send Message</a>
                       </li>
@@ -3310,7 +3310,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.3.1 to 1.3.2</b>
+                          <b>Upgrading from 1.3.2 to 1.3.3</b>
                         </p>
                         <ul>
                           <li>Replace all files and directories in your
@@ -3329,6 +3329,17 @@
 
                     <div class="row">
                       <div class="col-md-12 col-12">
+
+                        <div>
+                          <p><b>2023, August, 23 - v 1.3.3</b></p>
+                          <ul class="simple-list">
+                            <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
+                            <li><b>- Updated:</b> Sharia Khana VC Addon to 1.2.6</li>
+                            <li><b>- Updated:</b> Theme compatibility with the lastest WordPress (6.3.0) version.</li>
+                            <li><b>- Updated:</b> Theme language/translation file.</li>
+                            <li><b>- Updated:</b> Theme documentation.</li>
+                          </ul>
+                        </div>
 
                         <div>
                           <p><b>2023, August, 13 - v 1.3.2</b></p>
