--- a/greenlife/index.html
+++ b/greenlife/index.html
@@ -139,7 +139,7 @@
 
                   <small>
                     <i>Doc Last Update</i>
-                    05/01/2023</small>
+                    23/08/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -155,10 +155,10 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230105-1.2.5</li>
+                        20230823-1.2.6</li>
                       <li>
                         <strong>Recent Update:</strong>
-                        05/01/2023</li>
+                        23/08/2023</li>
                       <li>
                         <strong>Release Date:</strong>
                         02/03/2017</li>
@@ -2053,6 +2053,19 @@
                   <div class="section-block" id="changelog">
                     <h3 class="block-title">Change Log</h3>
 
+                    <div>
+                      <p><b>2023, August 21 - v 1.2.6</b></p>
+                      <ul class="simple-list">
+                        <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>                        
+                        <li><b>- Updated:</b> Wizard WPBakery Page Builder Addons to 1.2.3</li>
+                        <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
+                        <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
+                        <li><b>- Updated:</b> Theme language/translation file.</li>
+                        <li><b>- Updated:</b> Theme documentation.</li>
+                      </ul>
+                  </div>
+
+
                     <p>
                       <b>2023, January, 05 - v 1.2.5</b>
                     </p>
@@ -2065,6 +2078,8 @@
                       <li><b>- Updated:</b> Theme language/translation file.</li>
                       <li><b>- Updated:</b> Theme documentation.</li>
                     </ul>
+
+
                     <p>
                       <b>2022, May, 24 - v 1.2.4</b>
                     </p>
