--- a/appeal/appeal_theme/index.html
+++ b/appeal/appeal_theme/index.html
@@ -106,7 +106,7 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    05/01/2023</small>
+                    23/08/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -121,10 +121,10 @@
                     <ul>
                       <li>
                         <strong>Theme Version:</strong>
-                        20230105-1.1.9</li>
+                        20230823-1.2.1</li>
                       <li>
                         <strong>Theme Last Update:</strong>
-                        05/01/2023</li>
+                        23/08/2023</li>
                       <li>
                         <strong>Theme Create Date:</strong>
                         26/08/2016</li>
@@ -1808,7 +1808,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.1.8 to 1.1.9</b>
+                          <b>Upgrading from 1.2.0 to 1.2.1</b>
                         </p>
                         <ul>
                           <li>Replace all files and directories in your
@@ -1828,8 +1828,22 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
 
+
+                        <div>
+                          <p><b>2023, August 21 - v 1.2.1</b></p>
+                          <ul class="simple-list">
+                            <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>                        
+                            <li><b>- Updated:</b> Petitions Manager to 1.0.9</li>
+                            <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
+                            <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
+                            <li><b>- Updated:</b> Theme language/translation file.</li>
+                            <li><b>- Updated:</b> Theme documentation.</li>
+                          </ul>
+                      </div>
+
+
                         <p>
-                          <b>2023, January, 05 - v 1.2.5</b>
+                          <b>2023, January, 05 - v 1.2.0</b>
                         </p>
 
                         <ul class="simple-list">
