--- a/dynamism/index.html
+++ b/dynamism/index.html
@@ -138,7 +138,7 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    08/06/2023</small>
+                    23/08/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -153,13 +153,13 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230608-1.2.6</li>
+                        20230823-1.2.7</li>
                       <li>
                         <strong>Recent Update:</strong>
-                        08/06/2023</li>
+                        23/08/2023</li>
                       <li>
                         <strong>Release Date:</strong>
-                        11/13/2015</li>
+                        13/11/2015</li>
                       <li>
                         <strong>Get Premium Support:</strong>
                         <a href="https://themeforest.net/item/dynamism-political-activism-wp-theme/14756582/support/contact" target="_blank">Send Message</a>
@@ -2838,7 +2838,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.2.4 to 1.2.5</b>
+                          <b>Upgrading from 1.2.6 to 1.2.7</b>
                         </p>
 
                         <ul>
@@ -2853,6 +2853,19 @@
 
                   <div class="section-block" id="changelog">
                     <h3 class="block-title">Change Log</h3>
+
+                    <div>
+                      <p><b>2023, August 21 - v 1.2.7</b></p>
+                      <ul class="simple-list">
+                        <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>                        
+                        <li><b>- Updated:</b> Revslider to 6.6.15</li>
+                        <li><b>- Updated:</b> Ultimate VC Addon to 3.19.15</li>
+                        <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
+                        <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
+                        <li><b>- Updated:</b> Theme language/translation file.</li>
+                        <li><b>- Updated:</b> Theme documentation.</li>
+                      </ul>
+                  </div>
 
 
                     <p>
